--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -24,6 +24,10 @@ body, table, form, select, option, input, textarea {
     font: inherit;
 }
 
+label {
+    color: rgb(92, 92, 92);
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-size: 1em;
     letter-spacing: 0.01em;
@@ -44,4 +48,8 @@ a {
 
 li {
     list-style: none;
+}
+
+.error {
+    color: red;
 }
