add success Modal component

--- a/src/assets/variables.css
+++ b/src/assets/variables.css
@@ -4,4 +4,7 @@
 
     --spinner-color: rgb(216, 50, 0);
     --spiner-background: rgb(255, 255, 255);
+
+    --scroll-bar-background-color: rgb(73, 73, 73);
+    --scroll-bar-color: rgb(156, 156, 156);
 }
